Calculations of normalised and denoised expression rates and expression counts have been added.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,4 +37,5 @@ export(BASiCS_Filter,
        BASiCS_DetectHVG,
        BASiCS_DetectLVG,
        BASiCS_VarThresholdSearchHVG,
-       BASiCS_VarThresholdSearchLVG)
+       BASiCS_VarThresholdSearchLVG,
+       BASiCS_DenoisedRates)
