--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,9 @@ exportMethods(counts,
               displayTechIndicator, 
               displaySpikeInput,
               Summary,
-              plot)
+              plot,
+              displayChainBASiCS,
+              displaySummaryBASiCS)
 
 export(BASiCS_Filter,
        newBASiCS_Data,
@@ -19,18 +21,6 @@ export(BASiCS_Filter,
        BASiCS_Sim,
        makeExampleBASiCS_Data,
        BASiCS_MCMC,
-       displayChainMu,
-       displayChainDelta,
-       displayChainPhi,
-       displayChainS,
-       displayChainNu,
-       displayChainTheta,
-       displaySummaryMu,
-       displaySummaryDelta,
-       displaySummaryPhi,
-       displaySummaryS,
-       displaySummaryNu,
-       displaySummaryTheta,
        BASiCS_VarianceDecomp,
        BASiCS_DetectHVG,
        BASiCS_DetectLVG,
