--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
 Version: 0.4.1
-Date: 2016-02-04
+Date: 2016-02-05
 Author: Catalina A. Vallejos
 Maintainer: Catalina A. Vallejos <catalina.vallejos@mrc-bsu.cam.ac.uk>
 Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
@@ -23,7 +23,8 @@ Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
     variance contributions, quantities that can be easily interpreted by
     applied users.
 License: GPL (>= 2)
-Depends: R (>= 3.1.0)
+Depends:
+    R (>= 3.1.0)
 Imports:
     BiocGenerics,
     Rcpp (>= 0.11.3),
@@ -33,3 +34,4 @@ Suggests:
     knitr
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
+RoxygenNote: 5.0.1
