--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 0.5.8
-Date: 2016-05-18
+Version: 0.5.9
+Date: 2016-05-19
 Author: Catalina A. Vallejos
 Maintainer: Catalina A. Vallejos <catalina.vallejos@mrc-bsu.cam.ac.uk>
 Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
@@ -35,7 +35,8 @@ Imports:
     BiocGenerics,
     Rcpp (>= 0.11.3),
     methods,
-    coda
+    coda,
+    scran
 Suggests:
     knitr
 LinkingTo: Rcpp, RcppArmadillo
