--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -32,6 +32,7 @@ License: GPL (>= 2)
 Depends:
     R (>= 3.1.0)
 Imports:
+    SummarizedExperiment,
     BiocGenerics,
     Rcpp (>= 0.11.3),
     methods,
@@ -42,4 +43,4 @@ Suggests:
     testthat
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
