--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,19 +5,13 @@ importFrom(coda, HPDinterval)
 importFrom(methods, Summary)
 importFrom(testthat, context,
            test_check)
-# Add the import class SummarizedExperiment
+importClassesFrom(SummarizedExperiment, SummarizedExperiment)
 importMethodsFrom(BiocGenerics, counts)
 importMethodsFrom(scran, computeSumFactors)
 
-exportClasses("BASiCS_Data", "BASiCS_Chain" , "BASiCS_Summary",
-              "BASiCS_D_Data", "BASiCS_D_Chain" , "BASiCS_D_Summary")
+exportClasses("BASiCS_Chain" , "BASiCS_Summary")
 
-exportMethods(counts, 
-              displayTechIndicator, 
-              displaySpikeInput,
-              displayGeneNames,
-              displayBatchInfo,
-              Summary,
+exportMethods(Summary,
               plot,
               displayChainBASiCS,
               displaySummaryBASiCS)
@@ -35,9 +29,5 @@ export(BASiCS_Filter,
        BASiCS_VarThresholdSearchHVG,
        BASiCS_VarThresholdSearchLVG,
        BASiCS_DenoisedRates,
-       newBASiCS_D_Data,
-       CombineBASiCS_Data,
-       makeExampleBASiCS_D_Data,
-       newBASiCS_D_Chain,
-       CombineBASiCS_Chain,
+       BASiCS_DenoisedCounts,
        BASiCS_D_TestDE)
