--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -37,10 +37,10 @@ Imports:
     Rcpp (>= 0.11.3),
     methods,
     coda,
-    scran
+    scran,
+    testthat
 Suggests:
     knitr,
-    testthat
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
