--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -31,9 +31,9 @@ Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
 License: GPL (>= 2)
 Depends:
     R (>= 3.1.0),
-    S4Vectors
+    S4Vectors,
+    SummarizedExperiment
 Imports:
-    SummarizedExperiment,
     BiocGenerics,
     Rcpp (>= 0.11.3),
     methods,
