--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ import("SummarizedExperiment")
 importFrom("graphics", "abline", "barplot", "legend", "lines", "par",
              "points", "segments")
 importFrom("data.table", "fread")
+importFrom("graphics", "plot")
 importFrom("methods", "is", "new", "show")
 importFrom("S4Vectors", "metadata")
 importFrom("stats", "median", "model.matrix", "rgamma", "rpois",
