--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 0.7.27
-Date: : 2017-05-09
+Version: 0.7.28
+Date: : 2017-07-21
 Author: Catalina A. Vallejos
 Maintainer: Catalina A. Vallejos <cnvallej@uc.cl>
 Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
@@ -36,10 +36,11 @@ Imports:
     Rcpp (>= 0.11.3),
     methods,
     coda,
-    scran
-Suggests:
-    knitr,
+    scran,
+    data.table,
     testthat
+Suggests:
+    knitr
 LinkingTo: Rcpp, RcppArmadillo
 VignetteBuilder: knitr
 RoxygenNote: 6.0.1
