--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,7 @@ importFrom("data.table", "fread")
 importFrom("graphics", "plot")
 importFrom("methods", "is", "new", "show")
 importFrom("S4Vectors", "metadata")
-importFrom("stats", "median", "model.matrix", "rgamma", "rpois",
-             "runif")
+importFrom("stats", "median", "model.matrix", "rgamma", "rpois", "runif")
 importFrom("utils", "packageVersion", "write.table")
 importMethodsFrom("BiocGenerics", "counts")
 importMethodsFrom("scran", "computeSumFactors")
