--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ License: GPL (>= 2)
 Depends:
     R (>= 3.1.0),
     S4Vectors,
-    SummarizedExperiment
+    SingleCellExperiment
 Imports:
     BiocGenerics,
     Rcpp (>= 0.11.3),
