--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,7 @@ importFrom("coda", "HPDinterval")
 importFrom("methods", "Summary")
 importFrom("testthat", "context",
            "test_check")
-import("SummarizedExperiment")
+import("SingleCellExperiment")
 importFrom("graphics", "abline", "barplot", "legend", "lines", "par",
              "points", "segments", "smoothScatter")
 importFrom("data.table", "fread")
