--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,14 @@ importFrom("methods", "Summary")
 importFrom("testthat", "context",
            "test_check")
 import("SingleCellExperiment")
+import("KernSmooth")
 importFrom("graphics", "abline", "barplot", "legend", "lines", "par",
              "points", "segments", "smoothScatter")
 importFrom("data.table", "fread")
 importFrom("graphics", "plot")
 importFrom("methods", "is", "new", "show")
 importFrom("S4Vectors", "metadata")
+importFrom("SummarizedExperiment", "assay")
 importFrom("stats", "median", "model.matrix", "rgamma", "rpois", "runif")
 importFrom("utils", "packageVersion", "write.table")
 importMethodsFrom("BiocGenerics", "counts")
