--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,8 +17,13 @@ importFrom("S4Vectors", "metadata")
 importFrom("SummarizedExperiment", "assay")
 importFrom("stats", "median", "model.matrix", "rgamma", "rpois", "runif")
 importFrom("utils", "packageVersion", "write.table")
+importFrom(matrixStats, rowMeans2, colMeans2,
+                        rowVars, colVars)
+
 importMethodsFrom("BiocGenerics", "counts")
 importMethodsFrom("scran", "computeSumFactors")
+
+
 
 exportClasses("BASiCS_Chain" , "BASiCS_Summary")
 
