Bug fixes for checks

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,9 +35,11 @@ Imports:
     methods,
     coda,
     scran,
+    ggplot2,
     testthat,
     data.table,
     matrixStats,
+    MASS,
     graphics,
     KernSmooth,
     grDevices,
