--- a/NAMESPACE
+++ b/NAMESPACE
@@ -1,32 +1,31 @@
 useDynLib(BASiCS)
 exportPattern("^[^\\Hidden]") 
-importFrom("stats", "acf")
-importFrom("Rcpp", "evalCpp")
-importFrom("coda", "HPDinterval")
-importFrom("methods", "Summary")
-importFrom("testthat", "context",
-           "test_check")
-import("SingleCellExperiment")
-import("KernSmooth")
-importFrom("graphics", "abline", "barplot", "legend", "lines", "par",
-             "points", "segments", "smoothScatter")
-importFrom("data.table", "fread")
-importFrom("graphics", "plot")
-importFrom("methods", "is", "new", "show", "slotNames", ".hasSlot")
-importFrom("S4Vectors", "metadata")
-importFrom("SummarizedExperiment", "assay")
-importFrom("stats", "median", "model.matrix", "rgamma", "rpois", "runif")
-importFrom("utils", "packageVersion", "write.table")
+
+import(SingleCellExperiment)
+import(KernSmooth)
+
+importFrom(stats, acf)
+importFrom(Rcpp, evalCpp)
+importFrom(coda, HPDinterval)
+importFrom(methods, Summary)
+importFrom(testthat, context, test_check)
+importFrom(graphics, abline, barplot, legend, lines, par,
+                     points, segments, smoothScatter)
+importFrom(data.table, fread)
+importFrom(graphics, plot)
+importFrom(methods, is, new, show, slotNames, .hasSlot)
+importFrom(S4Vectors, metadata)
+importFrom(SummarizedExperiment, assay)
+importFrom(stats, median, model.matrix, rgamma, rpois, runif)
+importFrom(utils, packageVersion, write.table)
 importFrom(matrixStats, rowMeans2, colMeans2,
                         rowVars, colVars,
                         colMedians)
 
-importMethodsFrom("BiocGenerics", "counts", "updateObject")
-importMethodsFrom("scran", "computeSumFactors")
+importMethodsFrom(BiocGenerics, counts, updateObject)
+importMethodsFrom(scran, computeSumFactors)
 
-
-
-exportClasses("BASiCS_Chain" , "BASiCS_Summary")
+exportClasses(BASiCS_Chain , BASiCS_Summary)
 
 exportMethods(Summary,
               plot,
