--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,13 @@
 Package: BASiCS
 Type: Package
 Title: Bayesian Analysis of Single-Cell Sequencing data
-Version: 0.99.12
+Version: 0.99.13
 Date: : 2017-10-17
-Author: Catalina Vallejos, Nils Eling, Sylvia Richardson, John Marioni
+Authors@R: c(person("Catalina", "Vallejos", role=c("aut", "cre"),
+        email="cnvallej@uc.cl"), person("Nils", "Eling", 
+        role=c("aut"), email="eling@ebi.ac.uk"),  
+        person("Sylvia", "Richardson", role = c("ctb")), 
+        person("John", "Marioni", role=c("ctb"))) 
 Maintainer: Catalina A. Vallejos <cnvallej@uc.cl>
 Description: Single-cell mRNA sequencing can uncover novel cell-to-cell
  heterogeneity in gene expression levels in seemingly homogeneous populations 
